[package]
name = "tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoincore-rpc = "0.19.0"
clap = { version = "4.5.37", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-graceful = "0.2.2"
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
